--- a/prateek.html
+++ b/prateek.html
@@ -19,7 +19,7 @@
 
         <section style="margin: 60px auto; width: 1000px;">
             <h2>About</h2>
-            <p>I am currently studying at SRm Institute of Science and Technology and am passionate about Data Science. My interests include Computer Vision, Machine Learning, Deep Learning, Natural Language Processing and Data Analytics. I wish to pursue my masters in Data Science and am working for it with the best of my dedication. I want to learn and don't want to be the guy who gave up but the one who fought back.</p>
+            <p>I am currently studying at SRM Institute of Science and Technology and am passionate about Data Science. My interests include Computer Vision, Machine Learning, Deep Learning, Natural Language Processing and Data Analytics. I wish to pursue my masters in Data Science and am working for it with the best of my dedication. I want to learn and don't want to be the guy who gave up but the one who fought back.</p>
         </section>
         
         <section style="margin: 60px auto; width: 1000px;">  
