--- a/prateek.html
+++ b/prateek.html
@@ -106,7 +106,7 @@
             </div>
 
             <div class="col">
-                <a href="https://www.linkedin.com/in/saksham-bansal-1803/"><img src="images/linkedIn.jpg" style="height:50px; width:50px; margin-top: 75px"></a>
+                <a href="https://www.linkedin.com/in/prateekanand23/"><img src="images/linkedIn.jpg" style="height:50px; width:50px; margin-top: 75px"></a>
             </div>
 
             <div class="col">
