--- a/snehith.html
+++ b/snehith.html
@@ -106,7 +106,7 @@
             </div>
 
             <div class="col">
-                <a href="http://www.linkedin.com/in/snehith-reddy-076"><img src="images/linkedin.jpg" style="height:50px; width:50px; margin-top: 75px"></a>
+                <a href="http://www.linkedin.com/in/snehith-reddy-076"><img src="images/linkedIn.jpg" style="height:50px; width:50px; margin-top: 75px"></a>
             </div>
 
             <div class="col">
